--- a/about.html
+++ b/about.html
@@ -3,8 +3,53 @@
 <head>
 	<!--Add css later-->
 	<title>About</title>
+  <meta charset="utf-8">
+  <meta name="description" content="Demo GitHub page">
+  <meta name="viewport" content="width=device-width, initial-scale==1">
+  
+  <!-- Latest compiled and minified CSS from Bootstrap and Fontawesome-->
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <!-- jQuery library -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+  <!-- Latest compiled JavaScript -->
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<h1>About Page</h1>
+	<!-- will add information about my self-->
+	<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <!--Logo-->
+      <div class="navbar-header">
+        <button class="navbar-toggle" data-toggle="collapse" data-target="#mainNavBar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span> 
+        </button>
+        <a href="#">FN</a>
+      </div>
+      
+      <!--Menu Item-->
+      <div class="collapse navbar-collapse" id="mainNavBar">
+      <ul class="nav navbar-nav">
+        <li><a href="index.html">Home</a></li>
+        <li class="active"><a href="about.html">About</a></li>
+          <!--add dropdown menu here-->
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects<span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li>Web</li>
+              <li>Android</li>
+              <li>Java</li>
+            </ul>
+          </li>
+        <li><a href="#">Demo</a></li>
+      </ul>
+    </div>
+    </div>
+  </nav>
+  
+  <!--Add Stuff about me later-->
 </body>
 </html>
