--- a/about.html
+++ b/about.html
@@ -18,12 +18,12 @@
 </head>
 <body>
 	<!-- will add information about my self-->
-	<nav class="navbar navbar-inverse">
+	<nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
       <!--Logo-->
       <div class="navbar-header">
         <button class="navbar-toggle" data-toggle="collapse" data-target="#mainNavBar">
-          <span class="icon-bar"></span>
+          <span class="icon-bar"></sp111an>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span> 
         </button>
