change to main site

--- a/about.html
+++ b/about.html
@@ -41,7 +41,6 @@
             <ul class="dropdown-menu">
               <li>Web</li>
               <li>Android</li>
-              <li>Java</li>
             </ul>
           </li>
         <li><a href="#">Demo</a></li>
@@ -51,5 +50,17 @@
   </nav>
   
   <!--Add Stuff about me later-->
+  <div class="jumbotron">
+    <ui>
+      <li>Contacts</li>
+      <li>Resume</li>
+      <li>About Me</li>
+    </ui>
+  </div>
+  
+  <footer>
+    <h4>All Rights Reserved 2014-2015</h4>
+    <p>fnspecter69 @ github</p>
+  </footer>
 </body>
 </html>
