--- a/about.html
+++ b/about.html
@@ -15,6 +15,9 @@
 
   <!-- Latest compiled JavaScript -->
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  
+  <!--My css and scripts-->
+  <link rel="stylesheet" type="text/css" href="css/navfooter.css">
 </head>
 <body>
 	<!-- will add information about my self-->
