--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="description" content="Demo GitHub page">
   <meta name="viewport" content="width=device-width, initial-scale==1">
-  
+
   <!-- Latest compiled and minified CSS from Bootstrap and Fontawesome-->
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -15,7 +15,7 @@
 
   <!-- Latest compiled JavaScript -->
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-  
+
   <!--My css and scripts-->
   <link rel="stylesheet" type="text/css" href="css/navfooter.css">
 </head>
@@ -28,11 +28,11 @@
         <button class="navbar-toggle" data-toggle="collapse" data-target="#mainNavBar">
           <span class="icon-bar"></sp111an>
           <span class="icon-bar"></span>
-          <span class="icon-bar"></span> 
+          <span class="icon-bar"></span>
         </button>
         <a href="#">FN</a>
       </div>
-      
+
       <!--Menu Item-->
       <div class="collapse navbar-collapse" id="mainNavBar">
       <ul class="nav navbar-nav">
@@ -51,7 +51,7 @@
     </div>
     </div>
   </nav>
-  
+
   <!--Add Stuff about me later-->
   <div class="jumbotron">
     <ui>
@@ -60,10 +60,10 @@
       <li>About Me</li>
     </ui>
   </div>
-  
+
   <footer>
-    <h4>All Rights Reserved 2014-2015</h4>
-    <p>fnspecter69 @ github</p>
+		<a href="https://github.com/fnspecter69"><img src="img/GitHub-Mark/PNG/GitHub-Mark-32px.png" alt="Github logo" class="social-ion"></a>
+    <p>&copy; 2015 fnspecter69.github.io </p>
   </footer>
 </body>
 </html>
