changes to files

--- a/about.html
+++ b/about.html
@@ -17,46 +17,48 @@
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
   <!--My css and scripts-->
-  <link rel="stylesheet" type="text/css" href="css/navfooter.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
 	<!-- will add information about my self-->
-	<nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container-fluid">
-      <!--Logo-->
-      <div class="navbar-header">
-        <button class="navbar-toggle" data-toggle="collapse" data-target="#mainNavBar">
-          <span class="icon-bar"></sp111an>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a href="#">FN</a>
-      </div>
+	<header>
+		<nav class="navbar navbar-inverse navbar-fixed-top">
+    	<div class="container-fluid">
+      	<!--Logo-->
+      	<div class="navbar-header">
+        	<button class="navbar-toggle" data-toggle="collapse" data-target="#mainNavBar">
+          	<span class="icon-bar"></sp111an>
+          	<span class="icon-bar"></span>
+          	<span class="icon-bar"></span>
+        	</button>
+        	<a href="#">FN</a>
+      	</div>
 
-      <!--Menu Item-->
-      <div class="collapse navbar-collapse" id="mainNavBar">
-      <ul class="nav navbar-nav">
-        <li><a href="index.html">Home</a></li>
-        <li class="active"><a href="about.html">About</a></li>
-          <!--add dropdown menu here-->
+      	<!--Menu Item-->
+      	<div class="collapse navbar-collapse" id="mainNavBar">
+      	<ul class="nav navbar-nav">
+        	<li><a href="index.html">Home</a></li>
+        	<li class="active"><a href="about.html">About</a></li>
+          	<!--add dropdown menu here-->
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects<span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li>Web</li>
-              <li>Android</li>
-            </ul>
+            		<ul class="dropdown-menu">
+              		<li>Web</li>
+              		<li>Android</li>
+            		</ul>
           </li>
-        <li><a href="#">Demo</a></li>
-      </ul>
-    </div>
-    </div>
-  </nav>
+        	<li><a href="#">Demo</a></li>
+      	</ul>
+    		</div>
+    	</div>
+  	</nav>
+  </header>
 
   <!--Add Stuff about me later-->
-  <div class="jumbotron">
+  <div class="wrapper">
     <ui>
       <li>Contacts</li>
-      <li>Resume</li>
+      <li><a href="#">Resume<a></li>
       <li>About Me</li>
     </ui>
   </div>
