--- a/about.html
+++ b/about.html
@@ -7,9 +7,8 @@
   <meta name="description" content="Demo GitHub page">
   <meta name="viewport" content="width=device-width, initial-scale==1">
 
-  <!-- Latest compiled and minified CSS from Bootstrap and Fontawesome-->
+	<!-- Latest compiled and minified CSS from Bootstrap and Fontawesome-->
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <!-- jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
@@ -17,7 +16,7 @@
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
   <!--My css and scripts-->
-  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css"/>
 </head>
 <body>
 	<!-- will add information about my self-->
@@ -60,6 +59,7 @@
       <li>Contacts</li>
       <li><a href="#">Resume<a></li>
       <li>About Me</li>
+				<p>I am programmer</p>
     </ui>
   </div>
 
