--- a/about.html
+++ b/about.html
@@ -21,12 +21,12 @@
 <body>
 	<!-- will add information about my self-->
 	<header>
-		<nav class="navbar navbar-inverse navbar-fixed-top">
+		<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     	<div class="container-fluid">
       	<!--Logo-->
       	<div class="navbar-header">
         	<button class="navbar-toggle" data-toggle="collapse" data-target="#mainNavBar">
-          	<span class="icon-bar"></sp111an>
+          	<span class="icon-bar"></span>
           	<span class="icon-bar"></span>
           	<span class="icon-bar"></span>
         	</button>
@@ -43,6 +43,7 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects<span class="caret"></span></a>
             		<ul class="dropdown-menu">
               		<li>Web</li>
+									<li role="separator" class="divider"></li>
               		<li>Android</li>
             		</ul>
           </li>
