--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
   <!--My css and scripts-->
   <link rel="stylesheet" type="text/css" href="css/main.css"/>
 </head>
+
 <body>
 	<!-- will add information about my self-->
 	<header>
@@ -30,7 +31,7 @@
           	<span class="icon-bar"></span>
           	<span class="icon-bar"></span>
         	</button>
-        	<a href="#">FN</a>
+        	<a class="navbar-brand" href="#">FN</a>
       	</div>
 
       	<!--Menu Item-->
@@ -56,12 +57,14 @@
 
   <!--Add Stuff about me later-->
   <div class="wrapper">
-    <ui>
-      <li>Contacts</li>
-      <li><a href="#">Resume<a></li>
-      <li>About Me</li>
+		<div class="container">
+    	<ui>
+      	<li>Contacts</li>
+      	<li><a href="#">Resume<a></li>
+      	<li>About Me</li>
 				<p>I am programmer</p>
-    </ui>
+    	</ui>
+		</div>
   </div>
 
   <footer>
