--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
   </header>
 
   <!--Add Stuff about me later-->
-  <div class="wrapper">
+  <div class="jumbotron" id="aboutJumbotron">
 		<div class="container">
     	<ui>
       	<li>Contacts</li>
@@ -67,7 +67,7 @@
 		</div>
   </div>
 
-  <footer>
+  <footer class="site-footer">
 		<a href="https://github.com/fnspecter69"><img src="img/GitHub-Mark/PNG/GitHub-Mark-32px.png" alt="Github logo" class="social-ion"></a>
     <p>&copy; 2015 fnspecter69.github.io </p>
   </footer>
