--- a/about.html
+++ b/about.html
@@ -61,8 +61,9 @@
     	<ui>
       	<li>Contacts</li>
       	<li><a href="#">Resume<a></li>
-      	<li>About Me</li>
-				<p>I am programmer</p>
+      	<li>About Me
+          <p>I am programmer</p>
+        </li>
     	</ui>
 		</div>
   </div>
